--- a/css/credit.css
+++ b/css/credit.css
@@ -582,7 +582,7 @@ header .nav li:hover .sub-bar {
   margin-bottom: 70px;
 }
 .my-info {
-  float: left;
+  margin:0 auto;
   width: 455px;
   height: 488px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
